--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     <header>
         <h1>Google Sheets Web Viewer</h1>
     </header>
+    <div class="container">
+        <p>Đang tải dữ liệu từ Google Sheets... Xin chờ giây lát.</p>
+    </div>
     <footer>
         <p>&copy; 2024 Google Sheets Viewer</p>
     </footer>
