--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         // Thông tin API và Sheet
         const API_KEY = 'AIzaSyBzkCyFPR1PwKxXXIK0s8aJiAIMNCctiSw';
         const SHEET_ID = '16XYmvn3kq-fVr5mCQytiK6qc9iGWnZ73JP2HlJPM0vs';
-        const RANGE = 'sheet2'; // Tên sheet hoặc phạm vi trong Google Sheets
+        const RANGE = 'sheet1'; // Tên sheet hoặc phạm vi trong Google Sheets
 
         // Hàm tải dữ liệu từ Google Sheets
         async function fetchData() {
@@ -147,7 +147,7 @@
         <h1>Google Sheets Web Viewer</h1>
     </header>
     <div class="container">
-        <p>Đang tải dữ liệu từ Google Sheets... Xin chờ giây lát.</p>
+        <p>Đã tải xong dữ liệu từ Google Sheets... Cảm ơn bạn đã ủng hộ sản phẩm của mình.</p>
     </div>
     <footer>
         <p>&copy; 2024 Google Sheets Viewer</p>
